fix menu position and adjust spacing, font size

--- a/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/runstrap/_dropdown.scss
+++ b/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/runstrap/_dropdown.scss
@@ -354,7 +354,7 @@
 
   >li>a {
     color: var(--font-color);
-    font-size: $font-size-base;
+    font-size: $font-size-small;
     padding: $padding-dropdown-vertical $padding-dropdown-horizontal;
     @include transition-none();
 
